[project]
name = "anaplan-sdk"
version = "0.3.1b1"
description = "Provides pythonic access to the Anaplan API"
license = "Apache-2.0"
authors = [{ name = "Vinzenz Klass", email = "vinzenz.klass@valantic.com" }]
readme = "README.md"
keywords = ["anaplan", "anaplan api", "anaplan bulk api", "anaplan integration", "anaplan alm api", "anaplan audit api"]
requires-python = ">=3.10.4"
dependencies = [
    "pydantic>=2.7.2,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
    "cryptography>=42.0.7,<45.0.0"
]

[dependency-groups]
dev = [
    "ruff>=0.9.2",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.26.0",
    "pytest-xdist>=3.6.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.41",
    "mkdocstrings[python]>=0.26.2",
    "polars>=1.25.2",
    "griffe-fieldz>=0.2.1",
]

[project.urls]
Homepage = "https://vinzenzklass.github.io/anaplan-sdk/"
Repository = "https://github.com/VinzenzKlass/anaplan-sdk"
Documentation = "https://vinzenzklass.github.io/anaplan-sdk/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 100
fix = true
target-version = "py312"

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
minversion = "8.0"
addopts = "-ra -q"
pythonpath = "anaplan_sdk/"
testpaths = [
    "tests",
]
