[project]
name = "anaplan-sdk"
version = "0.5.4"
description = "Streamlined Python Interface for the Anaplan API."
license = "Apache-2.0"
authors = [{ name = "Vinzenz Klass", email = "vinzenz.klass@valantic.com" }]
readme = "README.md"
keywords = [
    "anaplan",
    "anaplan api",
    "anaplan sdk",
    "anaplan bulk api",
    "anaplan integration",
    "anaplan integration api",
    "anaplan alm api",
    "anaplan audit api",
    "anaplan cloudworks api",
    "anaplan transactional api",
]
requires-python = ">=3.10.4"
dependencies = [
    "pydantic>=2.7.2,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
]

[project.optional-dependencies]
cert = ["cryptography>=42.0.7,<47.0.0"]
oauth = ["oauthlib>=3.0.0,<4.0.0"]
keyring = ["keyring>=25.6.0,<26.0.0"]

[dependency-groups]
dev = [
    "ruff>=0.12.8",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-xdist>=3.8.0",
    "pytest-cov>=6.2.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.16",
    "mkdocstrings[python]>=0.30.0",
    "griffe>=1.7.3",
    "fieldz>=0.1.2",
    "griffe-fieldz>=0.3.0",
    "oauthlib>=3.2.2",
    "cryptography>=46.0.1",
    "keyring>=25.6.0",
    "mkdocs-minify-plugin>=0.8.0",
    "polars>=1.32.3",
]

[project.urls]
Homepage = "https://vinzenzklass.github.io/anaplan-sdk/"
Repository = "https://github.com/VinzenzKlass/anaplan-sdk"
Documentation = "https://vinzenzklass.github.io/anaplan-sdk/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 100
fix = true
target-version = "py313"

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
minversion = "8.0"
addopts = "-ra -q"
pythonpath = "anaplan_sdk/"
testpaths = ["tests"]
