[project]
name = "anaplan-sdk"
version = "0.5.13"
description = "Streamlined Python Interface for the Anaplan API."
license = "Apache-2.0"
authors = [{ name = "Vinzenz Klass", email = "vinzenz.klass@valantic.com" }]
readme = "README.md"
keywords = [
    "anaplan",
    "anaplan api",
    "anaplan sdk",
    "anaplan bulk api",
    "anaplan integration",
    "anaplan integration api",
    "anaplan alm api",
    "anaplan audit api",
    "anaplan cloudworks api",
    "anaplan transactional api",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10.4"
dependencies = [
    "pydantic>=2.7.2,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
]

[project.optional-dependencies]
cert = ["cryptography>=42.0.7,<47.0.0"]
oauth = ["oauthlib>=3.0.0,<4.0.0"]
keyring = ["keyring>=25.6.0,<26.0.0"]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
    "pre-commit>=4.3.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
    "pytest-cov>=7.1.0",
    "mkdocstrings[python]>=0.30.0",
    "griffe>=1.15.0",
    "fieldz>=0.2.0",
    "griffe-fieldz>=0.5.0",
    "oauthlib>=3.3.1",
    "cryptography>=46.0.7",
    "keyring>=25.7.0",
    "mkdocs-minify-plugin>=0.8.0",
    "polars>=1.40.0",
    "basedpyright>=1.39.2",
    "mkdocs-llmstxt>=0.5.0",
    "pyinstrument>=5.1.2",
    "zensical>=0.0.33",
]

[project.urls]
Homepage = "https://vinzenzklass.github.io/anaplan-sdk/"
Repository = "https://github.com/VinzenzKlass/anaplan-sdk"
Documentation = "https://vinzenzklass.github.io/anaplan-sdk/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
typeCheckingMode = "strict"
reportUnusedCallResult = false
reportExplicitAny = false
reportAny = false
reportMissingTypeStubs = false
reportUnusedClass = false

[tool.ruff]
respect-gitignore = false
line-length = 100
fix = true
target-version = "py314"

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
minversion = "8.0"
addopts = "-ra -q"
pythonpath = "anaplan_sdk/"
testpaths = ["tests"]
